Fixed Overflow

--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 /* GLOBAL STYLES */
 html {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
-  overflow: hidden;
   font-family: 'Poppins', sans-serif;
   background-color: #2E3440;
   color: #ECEFF4;
